# Django-Quotes-site

./: pyproject.toml
hw_project/: .env
hw_project/Utils/: add_quotes_to_mongo.py  migration.py
hw_project/hw_project/: settings.py
hw_project/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py  0003_rename_quote_quote_quote.py  0004_alter_quote_author.py  0005_alter_quote_author_alter_quote_created_at.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: author.html  base.html  create_new_quote.html  index.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/migrations/: 0001_initial.py  0002_remove_quote_author_remove_quote_tags_delete_author_and_more.py
hw_project/users/templates/users/: create_new_quote.html  login.html  password_reset_done.html  password_reset_email.html  signup.html
